Right name for bckgrd img

--- a/css/main.css
+++ b/css/main.css
@@ -276,7 +276,7 @@ a:hover, a:focus {
    Main styles
    ========================================================================== */
 header {
-  background: url(../img/restaurant-shadow-improve.jpeg) #231f20 no-repeat center center;
+  background: url(../img/restaurant-shadow-improve.jpg) #231f20 no-repeat center center;
   /*background: url(../img/header-bg.jpg) no-repeat center center;*/
   width: 100%;
   padding: 20px 10px 60px 10px;
