--- a/css/main.css
+++ b/css/main.css
@@ -230,6 +230,10 @@ a:hover, a:focus {
 	background: #6d3f96;
 }
 
+.off-white-bg{
+  background: #f2f2f2;
+}
+
 
 
 /* ==========================================================================
@@ -505,7 +509,14 @@ footer {
   padding: 60px 0px 0px 0px;
 }
 
+.col-sm-footer {
+  vertical-align: top;
+  width: 48%;
+  display: inline-block;
+}
+
 .social {
+  text-align: right;
   font-size: 1.2em;
   color: #31336c;
 }
@@ -525,6 +536,26 @@ footer {
 
 .email-hello:hover{
   color: #70cbce;
+}
+
+.email-footer{
+  display: block;
+}
+
+.address-detail {
+  font-family: 'Montserrat', sans-serif;
+  color: #31336c;
+  list-style-type: none;
+  font-size: 1.2em;
+}
+
+
+.logo-sm {
+  margin-top: 7%;
+}
+
+.lightwidget-widget {
+  margin-top: 5%;
 }
 
 
@@ -605,6 +636,19 @@ footer {
   margin-right: 0;
 }
 
+.col-sm-footer{
+  width: 100%;
+  display: block;
+}
+
+.social{
+  margin-top: 40px;
+  font-size: 1em;
+  padding-left: 40px;
+  text-align: left;
+
+}
+
 }
 
 
@@ -617,6 +661,17 @@ footer {
       background-attachment: scroll;
   }
 
+.col-sm-footer{
+  width: 100%;
+  display: block;
+}
+
+.social{
+  margin-top: 40px;
+  font-size: 1em;
+  padding-left: 40px;
+  text-align: left;
+}
 
 }
 
@@ -627,6 +682,11 @@ footer {
 #be-the-first {
       background-attachment: scroll;
   }
+
+.social{
+  font-size: 1em;
+  padding-left: 40px;
+}
 
 }
 
